--- a/StockManagement.Presentation/angular.json
+++ b/StockManagement.Presentation/angular.json
@@ -3,19 +3,9 @@
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
-    "StockManagement.Presentation": {
+    "StockManagement": {
       "projectType": "application",
-      "schematics": {
-        "@schematics/angular:component": {
-          "standalone": false
-        },
-        "@schematics/angular:directive": {
-          "standalone": false
-        },
-        "@schematics/angular:pipe": {
-          "standalone": false
-        }
-      },
+      "schematics": {},
       "root": "",
       "sourceRoot": "src",
       "prefix": "app",
@@ -23,7 +13,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:application",
           "options": {
-            "outputPath": "dist/stock-management.presentation",
+            "outputPath": "dist/stock-management",
             "index": "src/index.html",
             "browser": "src/main.ts",
             "polyfills": [
@@ -69,10 +59,10 @@
           "builder": "@angular-devkit/build-angular:dev-server",
           "configurations": {
             "production": {
-              "buildTarget": "StockManagement.Presentation:build:production"
+              "buildTarget": "StockManagement:build:production"
             },
             "development": {
-              "buildTarget": "StockManagement.Presentation:build:development"
+              "buildTarget": "StockManagement:build:development"
             }
           },
           "defaultConfiguration": "development"
@@ -97,8 +87,7 @@
             "styles": [
               "src/styles.css"
             ],
-            "scripts": [],
-            "karmaConfig": "karma.conf.js"
+            "scripts": []
           }
         }
       }
