--- a/StockManagement.Presentation/package.json
+++ b/StockManagement.Presentation/package.json
@@ -26,6 +26,7 @@
     "jwt-decode": "^4.0.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
+    "uuid": "^11.0.3",
     "xlsx": "^0.18.0",
     "zone.js": "~0.14.10"
   },
